# fluxopt_plot

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
dev/: 404.html  index.html  objects.inv
dev/api/: index.html
dev/search/: search_index.json
docs/: api.md  index.md
docs/stylesheets/: extra.css
src/fluxopt_plot/: __init__.py  accessor.py
tests/: test_accessor.py
